# Divamia

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  makefile  makeproj.sh
res/: screen.frag  screen.vert  tess.frag  tess.geom  tess.tctrl  tess.teval  tess.vert  test.frag  test.vert  text.frag  text.vert  texture.frag  texture.vert
src/: .demo.hpp.swp  .window.cpp.swp  buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  demo.cpp  demo.hpp  framebuffer.cpp  framebuffer.hpp  game.cpp  game.hpp  grabem.cpp  grabem.hpp  image.cpp  image.hpp  main.cpp  model.cpp  model.hpp  screen.hpp  shader.cpp  shader.hpp  tessdemo.cpp  tessdemo.hpp  text.cpp  text.hpp  texture.cpp  texture.hpp  vao.cpp  vao.hpp  vertex.cpp  vertex.hpp  window.cpp  window.hpp
